<resources>
    <string name="app_name">Kinvey Demo</string>

    <!-- Strings related to login -->
    <string name="collection">Collection Name</string>

    <string name="name">Item NAME</string>
    <string name="id">Item ID</string>
    <string name="meta_ect">Item Created Time</string>
    <string name="meta_lmt">Item Modified Time</string>
    <string name="acl">Item ACL</string>


    <string name="prompt_email">Email</string>
    <string name="email">kkarunarathna@virtusa.com</string>

    <string name="prompt_password">Password (optional)</string>
    <string name="password">1qaz2wsx@</string>


    <string name="action_sign_in">Sign-in/Sign-up</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>

    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>

    <string name="error_field_required">This field is required</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
